--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.23",
     "scripts": {
         "dev": "ng serve --host 0.0.0.0 --port 18002 --disable-host-check",
-        "analyze": "eslint",
+        "analyze": "eslint src/",
         "build": "ng build --configuration production"
     },
     "private": true,
