--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -36,7 +36,9 @@
                         "prefix": "app",
                         "style": "kebab-case"
                     }
-                ]
+                ],
+                "@typescript-eslint/explicit-function-return-type": "error",
+                "@typescript-eslint/explicit-member-accessibility": "error"
             }
         },
         {
