--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -38,7 +38,8 @@
                     }
                 ],
                 "@typescript-eslint/explicit-function-return-type": "error",
-                "@typescript-eslint/explicit-member-accessibility": "error"
+                "@typescript-eslint/explicit-member-accessibility": "error",
+                "sort-vars": "error"
             }
         },
         {
