ignore angular major version update (nebular not supporting >17)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,6 +21,10 @@ updates:
     directory: "/frontend"
     schedule:
       interval: "weekly"
+    ignore:
+      - dependency-name: "angular/*"
+        update-types:
+          - "version-update:semver-major"
     groups:
       minor:
         update-types: 
