more ignore angular packages for dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -25,6 +25,9 @@ updates:
       - dependency-name: "@angular/*"
         update-types:
           - "version-update:semver-major"
+       - dependency-name: "@angular-*/*"
+        update-types:
+          - "version-update:semver-major"         
     groups:
       minor:
         update-types: 
