--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,7 +22,7 @@ updates:
     schedule:
       interval: "weekly"
     ignore:
-       - dependency-name: "@angular*/*"
+       - dependency-name: "@angular*"
          update-types:
            - "version-update:semver-major"         
     groups:
