--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,6 +60,6 @@
         "prettier": "^3.3.0",
         "prettier-eslint": "^16.3.0",
         "ts-node": "~7.0.0",
-        "typescript": "~5.4.5"
+        "typescript": "^5.4.5"
     }
 }
