--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -31,6 +31,10 @@ updates:
        - dependency-name: "@angular-eslint/*"
          update-types:
            - "version-update:semver-major"
+       - dependency-name: "typescript"
+         update-types:
+           - "version-update:semver-major"
+           - "version-update:semver-minor"
     groups:
       minor:
         update-types: 
