--- a/backend/composer.json
+++ b/backend/composer.json
@@ -41,6 +41,8 @@
         "symfony/yaml": "^7.1"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^8.2",
+        "doctrine/doctrine-fixtures-bundle": "^3.6",
         "phpstan/extension-installer": "^1.4",
         "phpstan/phpstan-doctrine": "^1.4",
         "phpstan/phpstan-symfony": "^1.4",
