--- a/backend/.env.test
+++ b/backend/.env.test
@@ -1,2 +1,2 @@
 APP_ENV=test
-DATABASE_URL="mysql://expensave:expensave@localhost:3306/expensave_test?serverVersion=mariadb-10.6.0&charset=utf8mb4"
+DATABASE_URL="sqlite:///%kernel.project_dir%/var/app_test.db"
