--- a/backend/config/packages/doctrine.yaml
+++ b/backend/config/packages/doctrine.yaml
@@ -28,7 +28,10 @@ doctrine:
 when@test:
     doctrine:
         dbal:
+            dbname: 'expensave_test'
             dbname_suffix: '_test%env(default::TEST_TOKEN)%'
+            options:
+                1002: 1
 
 when@prod:
     doctrine:
