--- a/backend/config/packages/lexik_jwt_authentication.yaml
+++ b/backend/config/packages/lexik_jwt_authentication.yaml
@@ -4,3 +4,9 @@ lexik_jwt_authentication:
     pass_phrase: '%env(JWT_PASSPHRASE)%'
     user_id_claim: email
     token_ttl: 600
+
+when@test:
+    lexik_jwt_authentication:
+        secret_key: '%kernel.project_dir%/config/jwt/test/private-test.pem'
+        public_key: '%kernel.project_dir%/config/jwt/test/public-test.pem'
+        pass_phrase: 'test'
