--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -7,9 +7,6 @@ on:
     branches:
       - main
 
-env:
-  APP_ENV: dev
-
 jobs:
   backend-code-quality:
     name: Backend code quality checks
@@ -38,10 +35,11 @@ jobs:
         uses: php-actions/phpstan@v3
         with:
           php_version: 8.2
+      - name: Create schema for testing
+        run: php doctrine:schema:create
       - name: Run PHPUnit
         uses: php-actions/phpunit@v4
         env:
-          APP_ENV: test
           XDEBUG_MODE: coverage
         with:
           php_version: 8.2
