--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -32,9 +32,11 @@ jobs:
 #          path: ./src/
 #          args: -d memory_limit=-1
       - name: Warmup cache for phpstan
-        run: php bin/console cache:warmup -n
+        run: php bin/console cache:warmup -n --env=dev
       - name: Run PHPStan
         uses: php-actions/phpstan@v3
+        env:
+          APP_ENV: dev
         with:
           php_version: 8.2
       - name: Create schema for testing
