--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -22,7 +22,7 @@ jobs:
           shopt -s dotglob
           mv backend/* ./
           rm -rf backend/
-          mkdir ./var/cache
+          mkdir -p ./var/cache
           chmod 775 ./var/cache
       - name: Packages install
         uses: php-actions/composer@v6
