--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -26,6 +26,7 @@ jobs:
           mkdir -p ./var/log
           chmod 775 ./var/cache
           chmod 775 ./var/log
+          php -v
       - name: Packages install
         uses: php-actions/composer@v6
         with:
@@ -35,14 +36,14 @@ jobs:
 #        with:
 #          path: ./src/
 #          args: -d memory_limit=-1
-      - name: Warmup cache for phpstan
-        run: php bin/console cache:warmup -n --env=dev
-      - name: Run PHPStan
-        uses: php-actions/phpstan@v3
-        env:
-          APP_ENV: dev
-        with:
-          php_version: 8.2
+#      - name: Warmup cache for phpstan
+#        run: php bin/console cache:warmup -n --env=dev
+#      - name: Run PHPStan
+#        uses: php-actions/phpstan@v3
+#        env:
+#          APP_ENV: dev
+#        with:
+#          php_version: 8.2
       - name: Create schema for testing
         run: php bin/console doctrine:schema:create -n --env=test
       - name: Run PHPUnit
