--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Code coverage summary report
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          filename: coverage/clover.xml
+          filename: /home/runner/work/expensave/expensave/coverage/clover.xml
           badge: true
           fail_below_min: true
           hide_branch_rate: true
