--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -53,11 +53,11 @@ jobs:
         with:
           php_version: 8.3
           php_extensions: xdebug
-          coverage_clover: coverage/clover.xml
+          coverage_cobertura: coverage/cobertura.xml
       - name: Code coverage summary report
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          filename: coverage/clover.xml
+          filename: coverage/cobertura.xml
           badge: true
           fail_below_min: true
           hide_branch_rate: true
