--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -63,6 +63,7 @@ jobs:
           hide_branch_rate: true
           hide_complexity: true
           format: markdown
+          output: both
       - name: Add coverage report comment
         uses: marocchino/sticky-pull-request-comment@v2
         if: github.event_name == 'pull_request'
