--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -11,6 +11,8 @@ jobs:
   backend-code-quality:
     name: Backend code quality checks
     runs-on: ubuntu-24.04
+    permissions:
+      pull-requests: write
     steps:
       - name: Code checkout
         uses: actions/checkout@v4
