--- a/backend/config/packages/monolog.yaml
+++ b/backend/config/packages/monolog.yaml
@@ -14,6 +14,14 @@ monolog:
             max_files: 14
             channels: [deprecation]
 
+when@test:
+    monolog:
+        handlers:
+            main:
+                type: stream
+                path: php://stdout
+                level: warning
+
 when@prod:
     monolog:
         handlers:
