--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,13 +5,12 @@
         "outDir": "./dist/out-tsc",
         "sourceMap": true,
         "declaration": false,
-        "downlevelIteration": true,
+        "esModuleInterop": true,
         "experimentalDecorators": true,
         "module": "esnext",
         "moduleResolution": "node",
         "importHelpers": true,
         "target": "ES2022",
-        "allowSyntheticDefaultImports": true,
         "resolveJsonModule": true,
         "typeRoots": [
             "node_modules/@types"
