fix(import): ISO:20022 bugfixes

--- a/docker/supervisor/supervisor.conf
+++ b/docker/supervisor/supervisor.conf
@@ -65,11 +65,14 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 
 [program:messenger-consume]
-command=php bin/console messenger:consume --all -vv --time-limit=3600
+command=php bin/console messenger:consume --all -vv
 numprocs=2
 priority=6
 startsecs=0
 autostart=true
 autorestart=true
 startretries=10
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
 process_name=%(program_name)s_%(process_num)02d
