--- a/backend/composer.json
+++ b/backend/composer.json
@@ -24,12 +24,14 @@
         "symfony/asset": "^7.1",
         "symfony/console": "^7.1",
         "symfony/doctrine-bridge": "^7.1",
+        "symfony/doctrine-messenger": "7.1.*",
         "symfony/dotenv": "^7.1",
         "symfony/expression-language": "^7.1",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "^7.1",
         "symfony/google-mailer": "^7.1",
         "symfony/mailer": "^7.1",
+        "symfony/messenger": "7.1.*",
         "symfony/monolog-bundle": "^3.10",
         "symfony/property-access": "^7.1",
         "symfony/property-info": "^7.1",
