--- a/docker/supervisor/supervisor.conf
+++ b/docker/supervisor/supervisor.conf
@@ -63,3 +63,16 @@ startretries=1
 redirect_stderr=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
+
+[program:messenger-consume]
+command=php bin/console messenger:consume --all -vv
+numprocs=2
+priority=6
+startsecs=0
+autostart=true
+autorestart=true
+startretries=10
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+process_name=%(program_name)s_%(process_num)02d
