--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,5 +33,6 @@ jobs:
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
           push: true
+          target: application
           tags: ${{ steps.meta-backend.outputs.tags }}
           labels: ${{ steps.meta-backend.outputs.labels }}
