--- a/docker/supervisor/supervisor.conf
+++ b/docker/supervisor/supervisor.conf
@@ -1,6 +1,7 @@
 [supervisord]
 childlogdir=/tmp
 pidfile=/var/run/supervisord.pid
+logfile=/var/log/supervisord.log
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
@@ -9,20 +10,6 @@ stderr_logfile_maxbytes=0
 [program:nginx]
 command=nginx -c /etc/nginx/nginx.conf -g 'daemon off;'
 priority=6
-process_name=%(program_name)s_%(process_num)02d
-numprocs=1
-autostart=true
-autorestart=true
-startsecs=0
-redirect_stderr=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-
-[program:mariadb]
-command=/usr/sbin/mysqld
-priority=1
-user=mysql
-group=mysql
 process_name=%(program_name)s_%(process_num)02d
 numprocs=1
 autostart=true
@@ -63,16 +50,3 @@ startretries=1
 redirect_stderr=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
-
-[program:messenger-consume]
-command=php bin/console messenger:consume --all -vv
-numprocs=2
-priority=6
-startsecs=0
-autostart=true
-autorestart=true
-startretries=10
-redirect_stderr=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-process_name=%(program_name)s_%(process_num)02d
