--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -1,24 +1,34 @@
 services:
-  dev-application:
+  dev-backend:
     build:
-      target: development
+      target: development-backend
     volumes:
       - '.:/opt/expensave'
     environment:
       LOCALE: en
-      TZ: Europe/Vilnius # Change to preferred time zone https://www.php.net/manual/en/timezones.php
-      REGISTRATION_DISABLED: no # For security reason change to "yes" after all users registered
+      TZ: Europe/Vilnius
+      REGISTRATION_DISABLED: no
       DATABASE_URL: 'mysql://dev_expensave:dev_expensave@dev-database:3306/dev_expensave?serverVersion=10&charset=utf8mb4'
     depends_on:
       - dev-database
     ports:
       - 18001:18001
+
+  dev-frontend:
+    build:
+      target: development-frontend
+    environment:
+      LOCALE: en
+      REGISTRATION_DISABLED: no
+    volumes:
+      - '.:/opt/expensave'
+    ports:
       - 18002:18002
 
   dev-database:
     image: mariadb:10
     volumes:
-      - '../expensave_development:/var/lib/mysql'
+      - './backend/var/db:/var/lib/mysql'
       - './docker/mariadb/development.init.sql:/docker-entrypoint-initdb.d/init.sql'
     restart: unless-stopped
     environment:
