--- a/backend/.env
+++ b/backend/.env
@@ -16,12 +16,13 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=prod
+LOCALE=en
 APP_SECRET={REGENERATE_SECRET}
 TZ=Europe/Vilnius
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL="mysql://expensave:expensave@localhost:3306/expensave?serverVersion=mariadb-10.6.0&charset=utf8mb4"
+DATABASE_URL="mysql://expensave:expensave@database:3306/expensave?serverVersion=mariadb-10.6.0&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/lock ###
