--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -8,7 +8,7 @@ services:
       LOCALE: en
       TZ: Europe/Vilnius
       REGISTRATION_DISABLED: no
-      DATABASE_URL: 'mysql://dev_expensave:dev_expensave@dev-database:3306/dev_expensave?serverVersion=10&charset=utf8mb4'
+      DATABASE_URL: 'mysql://dev-expensave:dev-expensave@dev-database:3306/dev-expensave?serverVersion=10&charset=utf8mb4'
     depends_on:
       - dev-database
     ports:
@@ -33,8 +33,8 @@ services:
     restart: unless-stopped
     environment:
       MARIADB_RANDOM_ROOT_PASSWORD: yes
-      MARIADB_USER: dev_expensave
-      MARIADB_PASSWORD: dev_expensave
-      MARIADB_DATABASE: dev_expensave
+      MARIADB_USER: dev-expensave
+      MARIADB_PASSWORD: dev-expensave
+      MARIADB_DATABASE: dev-expensave
     ports:
       - 3306:3306
