fix: github actions

--- a/backend/.env
+++ b/backend/.env
@@ -22,7 +22,7 @@ TZ=Europe/Vilnius
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL="mysql://expensave:expensave@127.0.0.1:3306/expensave?serverVersion=mariadb-10.6.0&charset=utf8mb4"
+DATABASE_URL="mysql://expensave:expensave@database:3306/expensave?serverVersion=mariadb-10.6.0&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/lock ###
