fix: github actions

--- a/backend/.env
+++ b/backend/.env
@@ -22,7 +22,11 @@ TZ=Europe/Vilnius
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL="mysql://expensave:expensave@database:3306/expensave?serverVersion=mariadb-10.6.0&charset=utf8mb4"
+DATABASE_USER=expensave
+DATABASE_PASS=expensave
+DATABASE_NAME=expensave
+DATABASE_PORT=3306
+DATABASE_HOST=database
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/lock ###
