--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -7,6 +7,9 @@ on:
     branches:
       - main
 
+env:
+  DATABASE_HOST: 127.0.0.1
+
 jobs:
   backend-code-quality:
     name: Backend code quality checks
