--- a/backend/config/packages/doctrine.yaml
+++ b/backend/config/packages/doctrine.yaml
@@ -1,7 +1,7 @@
 doctrine:
     dbal:
         dbname: '%env(DATABASE_NAME)%'
-        host: '%env(DATABASE_HOST))%'
+        host: '%env(DATABASE_HOST)%'
         port: '%env(DATABASE_PORT)%'
         user: '%env(DATABASE_USER)%'
         password: '%env(DATABASE_PASS)%'
