--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -23,6 +23,8 @@ jobs:
           MARIADB_PASSWORD: expensave
           MARIADB_DATABASE: expensave_test
         options: --health-cmd="healthcheck.sh --connect --innodb_initialized" --health-interval=10s --health-timeout=5s --health-retries=3
+        ports:
+          - 3306:3306
     steps:
       - name: Code checkout
         uses: actions/checkout@v4
