--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -66,7 +66,7 @@ jobs:
           XDEBUG_MODE: coverage
         with:
           php_version: 8.3
-          php_extensions: xdebug
+          php_extensions: xdebug pdo pdo_mysql
           coverage_cobertura: coverage/cobertura.xml
       - name: Code coverage summary report
         uses: irongut/CodeCoverageSummary@v1.3.0
