--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -108,3 +108,16 @@ jobs:
         run: npm ci
       - name: Run ESLint
         run: npm run analyze
+
+  sonarcloud:
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
