feat: code coverage ignore

--- a/backend/phpunit.xml.dist
+++ b/backend/phpunit.xml.dist
@@ -21,6 +21,9 @@
     <include>
       <directory suffix=".php">src</directory>
     </include>
+    <exclude>
+      <directory>src/DTO</directory>
+    </exclude>
   </source>
   <extensions>
     <bootstrap class="DAMA\DoctrineTestBundle\PHPUnit\PHPUnitExtension" />
