feat: code coverage

--- a/backend/sonar-project.properties
+++ b/backend/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=algirdasc_expensave
 sonar.organization=algirdasc
 
-sonar.php.coverage.reportPaths=coverage/clover.xml
+sonar.php.coverage.reportPaths=coverage.xml
+sonar.php.tests.reportPath=result.xml
