--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -68,7 +68,8 @@ jobs:
         with:
           php_version: 8.3
           php_extensions: xdebug pdo pdo_mysql
-          coverage_clover: coverage/clover.xml
+          coverage_clover: coverage.xml
+          log_junit: report.xml
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
