feat: code coverage

--- a/backend/sonar-project.properties
+++ b/backend/sonar-project.properties
@@ -1,5 +1,8 @@
 sonar.projectKey=algirdasc_expensave
 sonar.organization=algirdasc
 
+sonar.sources=src/
+sonar.tests=tests/
+
 sonar.php.coverage.reportPaths=coverage.xml
 sonar.php.tests.reportPath=result.xml
