--- a/backend/sonar-project.properties
+++ b/backend/sonar-project.properties
@@ -5,4 +5,4 @@ sonar.sources=src/
 sonar.tests=tests/
 
 sonar.php.coverage.reportPaths=coverage.xml
-sonar.php.tests.reportPath=result.xml
+sonar.php.tests.reportPath=report.xml
