--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -58,6 +58,7 @@ jobs:
           APP_ENV: dev
         with:
           php_version: 8.3
+          path: 'src/'
       - name: Create schema for testing
         run: php bin/console doctrine:schema:create -n --env=test
       - name: Run PHPUnit
@@ -67,23 +68,13 @@ jobs:
         with:
           php_version: 8.3
           php_extensions: xdebug pdo pdo_mysql
-          coverage_cobertura: coverage/cobertura.xml
-      - name: Code coverage summary report
-        uses: irongut/CodeCoverageSummary@v1.3.0
-        with:
-          filename: coverage/cobertura.xml
-          badge: true
-          fail_below_min: false
-          hide_branch_rate: true
-          hide_complexity: true
-          format: markdown
-          output: both
-#      - name: Add coverage report comment
-#        uses: marocchino/sticky-pull-request-comment@v2
-#        if: github.event_name == 'pull_request'
-#        with:
-#          recreate: true
-#          path: code-coverage-results.md
+          coverage_clover: coverage.xml
+          log_junit: report.xml
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   frontend-code-quality:
     name: Frontend code quality checks
