fix: github actions secrets inherit

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,7 @@ jobs:
   code-quality:
     name: Run quality checks
     uses: ./.github/workflows/code-quality.yml
+    secrets: inherit
   push-to-registry:
     name: Build & push image to Docker Hub
     needs:
