--- a/backend/composer.json
+++ b/backend/composer.json
@@ -46,8 +46,9 @@
         "dama/doctrine-test-bundle": "^8.2",
         "doctrine/doctrine-fixtures-bundle": "^3.6",
         "phpstan/extension-installer": "^1.4",
-        "phpstan/phpstan-doctrine": "^1.4",
-        "phpstan/phpstan-symfony": "^1.4",
+        "phpstan/phpstan": "^2.0",
+        "phpstan/phpstan-doctrine": "^2.0",
+        "phpstan/phpstan-symfony": "^2.0",
         "phpunit/phpunit": "^11.2",
         "roave/security-advisories": "dev-latest",
         "symfony/browser-kit": "^7.1",
