chore: add missing supervisord configuration

--- a/docker/supervisor/supervisord.conf
+++ b/docker/supervisor/supervisord.conf
@@ -4,6 +4,15 @@ nodaemon=true
 logfile=/dev/null
 logfile_maxbytes=0
 
+[unix_http_server]
+file=/run/supervisord.lock
+
+[supervisorctl]
+serverurl=unix:///run/supervisord.lock
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
 [program:apache2]
 command=/usr/sbin/apache2ctl -D FOREGROUND
 stdout_logfile=/dev/fd/1
